@@ -1,63 +1,54 @@
-description = 'CassandraDemo'
-apply plugin: 'base'
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'application'
-
-eclipse {
-  jdt {
-    //if you want to alter the java versions (by default they are configured with gradle java plugin settings):
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
-    }
-  }
-
-
-allprojects {
-  tasks.withType(JavaExec) {
-    doFirst {
-//      println commandLine
-   }
-  }
-  sourceCompatibility = 1.8
-  targetCompatibility = 1.8
+plugins {
+    id 'java'
+    id 'eclipse'
+    id 'application'
 }
 
+group = 'cassdemo'
+version = '1.0-SNAPSHOT'
+description = 'CassandraDemo'
+
+java {
+    // Upgraded to Java 17
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 repositories {
-	maven { url "http://repo.springsource.org/libs-milestone" }
-	maven { url "http://repo.springsource.org/libs-release" }
-	mavenLocal()
-	mavenCentral()
+    mavenCentral()
+    mavenLocal()
+    maven { url "https://repo.spring.io/milestone" }
+    maven { url "https://repo.spring.io/release" }
 }
 
 dependencies {
-  compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.+'
-  compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.+'
+    implementation 'org.slf4j:slf4j-api:1.7.36'
+    implementation 'ch.qos.logback:logback-classic:1.4.12'
 
-  compile 'com.datastax.cassandra:cassandra-driver-core:3.3.0'
-  compile 'org.apache.cassandra:cassandra-all:3.11.0'
+    implementation 'com.datastax.cassandra:cassandra-driver-core:3.11.3'
+    implementation 'org.apache.cassandra:cassandra-all:3.11.16'
+
+    // JLine 3 for the Shell
+    implementation 'org.jline:jline:3.25.1'
 }
 
-configurations.all {
-//    exclude module: 'logback-classic'
+application {
+    mainClass = 'cassdemo.Main'
 }
 
-project.buildDir = 'bin'
+layout.buildDirectory.set(file('bin'))
 
-mainClassName = "cassdemo.Main"
-
-run {
-    //systemProperty 'logback.configurationFile', 'logback.xml'
+tasks.withType(JavaExec).configureEach {
     standardInput = System.in
-    
-    if(project.hasProperty('myargs')){
-        //String[] myargsArray = myargs.split(',')
-        String[] myargsArray = myargs.split(' ')
-        for (int i = 0; i < myargsArray.length; i++) 
-            myargsArray[i] = myargsArray[i].trim();
-        args(myargsArray)
+
+    // Add these flags to permit reflection on internal Java modules
+    jvmArgs(
+            '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
+    )
+
+    if (project.hasProperty('myargs')) {
+        args(myargs.split(' ').collect { it.trim() })
     }
 }
-
-
